--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@reown/appkit-adapter-ethers": "^1.6.2",
     "@reown/appkit-adapter-wagmi": "^1.6.2",
     "@tanstack/react-query": "^5.62.10",
+    "bignumber.js": "^9.1.2",
     "ethers": "^6.13.4",
     "gh-pages": "^6.3.0",
     "i18next": "^24.2.0",
